<resources>
 <string name="app_name">BraApp Tutor</string>
 <string name="descr">Aprende a enseñar Braille de forma rápida y divertida en solo unos minutos.</string>
 <string name="nombre_de_usuario">Nombre de Usuario:</string>
 <string name="usuario1">Usuario</string>
 <string name="perfil">Perfil</string>
 <string name="aceptar">Aceptar</string>
 <string name="melodia">Melodía:</string>
 <string name="volumen">Volumen:</string>
 <string name="usuario">Usuario</string>
 <string name="bu">Bu</string>
 <string name="aparece">Aparece:</string>
 <string name="funci_n">Función:</string>
 <string name="quot_gracias_aquellas_personas_que_nos_apoyaron_y_ayudaron_a_continuar_con_este_proyecto_esperamos_que_este_proyecto_siga_creciendo_con_ustedes_gracias_por_todo_quot">\"Gracias aquellas personas que nos apoyaron y ayudaron a continuar con este proyecto. Esperamos que este proyecto siga creciendo con ustedes. Gracias por todo.\"</string>
 <string name="quot_no_te_olvides_de_seguirnos_apoyando_en_nuestras_redes_sociales_quot">\"No te olvides de seguirnos apoyando en nuestras redes sociales.\"</string>
 <string name="ing_arely_vanessa_romero_clemente">Ing. Arely Vanessa Romero Clemente</string>
 <string name="director_general">Director General</string>
 <string name="ing_alejandro_lim_n_t_llez">Ing. Alejandro Limón Téllez</string>
 <string name="gerente_general">Gerente General</string>
 <string name="_06_septiembre_2021">28/Septiembre/2022</string>
 <string name="cancelar">Cancelar</string>
 <string name="nota_musical_2">Nota Musical 2</string>
 <string name="tono_o_canci_n">Tono o Canción</string>
 <string name="restablecer">Restablecer</string>
 <string name="ajustes">Ajustes</string>
 <string name="nota_musical_1">Nota Musical 1</string>
 <string name="control_de_volumen">Control de Volumen</string>
 <string name="aviso1">Producto con el fin de auxiliar al tutor, sin fines discriminatorios. Tenga en cuenta que cuando su dispositivo tenga internet tendrá más opciones a utilizar, en caso contrario se limitara su uso. Tome su debida precaución si usted activa sus datos móviles, ya que el consumo del recurso puede ser excesivo, en caso de utilizarlo, será bajo su responsabilidad. Sus registros son locales, al entrar a récord se respalda su información. Tenga precaución en el audio de su dispositivo y de BraAppTutor.</string>
 <string name="saltar">Saltar</string>
 <string name="comenzar">Comenzar</string>
 <string name="editar_usuario">Editar Usuario</string>
 <string name="selecciona_un_perfil">Selecciona Un Perfil</string>
 <string name="podras_escanear_los_codigos_qr_y_saber_su_significado">Podrás escanear los códigos QR y saber su significado.</string>
 <string name="no_requiere_internet">No requiere Internet.</string>
 <string name="podras_traducir_de_espa_ol_a_braille">Podrás traducir de Español a Braille.</string>
 <string name="podras_traducir_de_braille_a_espa_ol">Podrás traducir de Braille a Español</string>
 <string name="letra_en_espa_ol">Letra en Español</string>
 <string name="letra">Letra</string>
 <string name="convertir">Convertir</string>
 <string name="f">$</string>
 <string name="ver_mas">Ver Más...</string>
 <string name="aviso">Aviso</string>
 <string name="producto_similar">Producto Similar</string>
 <string name="productos_del_mercado">Productos del Mercado.</string>
 <string name="productos_que_se_pueden_adquirir_en_linea">Productos que se pueden adquirir en línea.</string>
 <string name="resultado">Resultado:</string>
 <string name="correo">Correo</string>
 <string name="contrase_a">Contraseña</string>
 <string name="confirmar_contrase_a">Confirmar Contraseña</string>
 <string name="registrar">Registrar</string>
 <string name="chat">Chat</string>
 <string name="pagina_web">Página Web</string>
 <string name="facebook_braille_package">Facebook Braille Package</string>
 <string name="instagram_braille_package">Instagram Braille Package</string>
 <string name="twitter_braille_package">Twitter Braille Package</string>
 <string name="youtube_braille_package">Youtube Braille Package</string>
 <string name="recomendaci_n">Recomendación</string>
 <string name="recomendaciones_al_crear_productos">Recomendaciones al crear productos.</string>
 <string name="materiales_recomendados_para_realizar_el_material">Materiales recomendados para realizar el material.</string>
 <string name="producto">Producto</string>
 <string name="productos_de_braille_package">Productos de Braille Package.</string>
 <string name="productos_realizados_por_el_equipo_braille_package">Productos realizados por el equipo Braille Package.</string>
 <string name="descripci_n">Descripción:</string>
 <string name="nota">Nota:</string>
 <string name="sitio_de_compra">Sitio de Compra:</string>
 <string name="con_ctate_a_internet_para_ver_los_avisos">Conéctate a internet para ver los avisos.</string>
 <string name="traductor">Traductor</string>
 <string name="juegos">Juegos</string>
 <string name="historia">Historia</string>
 <string name="redes_sociales">Redes Sociales</string>
 <string name="si_requiere_internet">Si requiere Internet.</string>
 <string name="material_de_apoyo">Material de Apoyo</string>
 <string name="extra">Extra</string>
 <string name="productos">Productos</string>
 <string name="olvide_mi_contrase_a">Olvidé mi contraseña</string>
 <string name="iniciar_sesi_n">Iniciar Sesión</string>
 <string name="lector_de_qr">Lector de Qr</string>
 <string name="escanear">Escanear</string>
 <string name="letras">Letras</string>
 <string name="numeros">Números</string>
 <string name="acento_di_resis_y_simbolos">Acento, Diéresis y Símbolos</string>
 <string name="espa_ol_braille">Español-Braille</string>
 <string name="seleccione_simbolo">Seleccione Símbolo</string>
 <string name="resultado_en_minuscula">Resultado en Minúscula</string>
 <string name="resultado_en_mayuscula">Resultado en Mayúscula</string>
 <string name="resultado_en_numero">Resultado en Número</string>
 <string name="cerrar_sesi_n">Cerrar Sesión</string>
 <string name="cambio_de_contrase_a">Cambio de Contraseña</string>
 <string name="braille_espa_ol">Braille-Español</string>
 <string name="simbolo_en_braille">Símbolo en Braille</string>
 <string name="letra_en_braille">Letra en Braille</string>
 <string name="n_mero_en_braille">Número en Braille</string>
 <string name="flechas">Flechas</string>
 <string name="consulta_en_nuestro_sitio_web_oficial_la_documentacion_para_elaborar_tu_propio_material_didactico">Consulta en nuestro sitio web oficial la documentación para elaborar tu propio material didáctico.</string>
 <string name="memorama">Memorama</string>
 <string name="adivinanza">Adivinanza</string>
 <string name="minusculas_y_simbolos">Minúsculas y Símbolos</string>
 <string name="mayusculas_y_numeros">Mayúsculas y Números</string>
 <string name="mayusculas">Mayúsculas</string>
 <string name="open">open</string>
 <string name="close">close</string>
 <string name="menu_principal">Menú Principal</string>
 <string name="sin_internet_con_excepci_n_de_record_mundial">Sin internet con excepción de Récord Mundial.</string>
 <string name="si_requiere_internet_al_entrar_en_submenu">Si requiere internet al entrar en las categorías.</string>
 <string name="si_requiere_internet_entrar_a_las_redes_sociales">Si requiere internet entrar a las Redes Sociales.</string>
 <string name="no_requiere_internet_a_excepci_n_del_ver_mas">No requiere internet a excepción del Ver Mas.</string>
 <string name="conectate_para_ver_los_productos_disponibles">Conéctate para ver los productos disponibles</string>
 <string name="conectate_para_ver_las_recomendaciones_disponibles">Conéctate para ver las recomendaciones disponibles</string>
 <string name="conectate_para_ver_los_productos_similares_en_el_mercado">Conectate para ver los productos similares en el mercado.</string>
 <string name="estas_seguro_al_cerrar_sesi_n_se_perdera_todo_tu_registro_he_iniciare_nuevamente2">Al cerrar sesión solo se cerrará su cuenta de la aplicación, se restablecerá el progreso en juegos almacenados en el teléfono.</string>
 <string name="estas_seguro">¿Estás seguro?</string>
 <string name="estas_seguro_al_cerrar_sesi_n_se_perdera_todo_tu_registro_he_iniciare_nuevamente1"> ¿Estás seguro?, al cerrar sesión se perderá todo tu registro, he iniciará nuevamente o bien recuperar su progreso de los juegos. Se cerrara automáticamente tu sesión en chat.</string>
 <string name="recuerde">Recuerde!</string>
 <string name="estas_seguro_al_cerrar_sesi_n_se_perdera_todo_tu_registro_he_iniciare_nuevamente3">Al cerrar sesión solo se cerrará su cuenta en el chat..</string>
 <string name="telegram_braille_package">Telegram Braille Package</string>
 <string name="todo">TODO</string>
 <string name="all">all</string>
 <string name="pulsa_fuera_dal_area_para_continuar">Pulsa fuera del área para continuar...</string>
 <string name="los_puntos_que_logres_obtener_se_acomularan_en_tu_record_mundial">Los puntos que logres obtener, se acumularán en tu récord mundial</string>
 <string name="perderas_5_puntos_cada_vez_que_solicites_la_pista">Perderás 5 puntos cada vez que solicites la pista.</string>
 <string name="perderas_2_puntos_cada_vez_que_selecciones_la_respuesta_incorrecta_y_en_cambiar_la_adivinanza">Perderás 2 puntos cada vez que selecciones la respuesta incorrecta y en cambiar la adivinanza.</string>
 <string name="recibiras_10_puntos_cada_vez_que_selecciones_las_respuesta_correcta">Recibirás 10 puntos cada vez que selecciones la respuesta correcta</string>
 <string name="lee_el_texto_y_selecciona_la_respuesta_correcta">Lee el texto y selecciona la respuesta correcta</string>
 <string name="instrucciones">Instrucciones</string>
 <string name="los_puntos_que_logres_obtener_se_acomularan_en_tu_record_mundial1">Los puntos que logres obtener, se acumularán en tu récord mundial.</string>
 <string name="perderas_2_puntos_cada_vez_que_falles_al_buscar_los_pares_de_las_letras">Perderás 2 puntos cada vez que falles al buscar los pares de las letras.</string>
 <string name="recibiras_10_puntos_por_cada_par_de_letras_que_encuentres">Recibirás 10 puntos por cada par de letras que encuentres.</string>
 <string name="perderas_un_intento_cada_vez_que_falles_al_buscar_los_pares_de_las_letras">Perderás un intento cada vez que falles al buscar los pares de las letras.</string>
 <string name="recibiras_un_intento_extra_por_cada_par_de_letras_que_encuentres">Recibirás un intento extra por cada par de letras que encuentres.</string>
 <string name="_6">6</string>
 <string name="inicias_con_6_intentos">Inicias con 6 intentos.</string>
 <string name="adivinanza_numeros_bra_es">Adivinanza Números BRA-ES:</string>
 <string name="adivinanza_mayusculas_bra_es">Adivinanza Mayúsculas BRA-ES:</string>
 <string name="adivinanza_minusculas_y_simbolos_bra_es">Adivinanza Minúsculas y simbolos BRA-ES:</string>
 <string name="adivinanza_mayusculas_y_numeros_es_bra">Adivinanza Mayúsculas y numeros ES-BRA:</string>
 <string name="adivinanza_minusculas_y_simbolos_es_bra">Adivinanza Minúsculas y símbolos ES-BRA:</string>
 <string name="memorama_simbolos">Memorama Símbolos:</string>
 <string name="memorama_numeros">Memorama Números:</string>
 <string name="memorama_mayusculas">Memorama Mayúsculas:</string>
 <string name="memorama_minusculas">Memorama Minúsculas:</string>
 <string name="general">General:</string>
 <string name="si">Si</string>
 <string name="no">No</string>
 <string name="esta_es_tu_cuenta"> ¿Está es tu cuenta? </string>
 <string name="correo1">Correo:</string>
 <string name="cuenta_creada_ateriormente_estos_son_tus_datos">Cuenta creada anteriormente, estos son tus datos:</string>
 <string name="datos_de_jugador">Datos de jugador</string>
 <string name="ejemplo_gmail_com">Ejemplo@gmail.com</string>
 <string name="cuando_te_equivoques_4_veces_se_actualizara_el_juego_y_restablecer_los_puntos">Cuando te equivoques 4 veces se actualizara el juego y restablecer los puntos.</string>
</resources>