<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/uno1"
                android:icon="@drawable/home"
                android:title="@string/menu_principal" />
        </group>

        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/dos2"
                android:icon="@drawable/mat1"
                android:title="@string/material_de_apoyo"/>
        </group>

        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/tres3"
                android:icon="@drawable/redess1"
                android:title="@string/redes_sociales" />
        </group>

        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/cuatro4"
                android:icon="@drawable/juegoss"
                android:title="@string/juegos" />
        </group>

        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/cinco5"
                android:icon="@drawable/history"
                android:title="@string/historia" />

        </group>
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/seis6"
            android:icon="@drawable/estrellas"
            android:title="@string/extra" />
    </group>
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/siete7"
            android:icon="@drawable/producc"
            android:title="@string/productos" />
    </group>
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/ocho8"
            android:icon="@drawable/traduccion"
            android:title="@string/traductor" />
    </group>
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nueve9"
            android:icon="@drawable/chat"
            android:title="@string/chat" />
    </group>
    </menu>

