<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@color/transparente">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="16dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5sp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_basic"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/lee_el_texto_y_selecciona_la_respuesta_correcta"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/pts5" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_basic"
                    android:text="@string/recibiras_10_puntos_cada_vez_que_selecciones_las_respuesta_correcta"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_basic"
                    android:text="@string/perderas_2_puntos_cada_vez_que_selecciones_la_respuesta_incorrecta_y_en_cambiar_la_adivinanza"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/pts2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/pts5" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_basic"
                    android:text="@string/cuando_te_equivoques_4_veces_se_actualizara_el_juego_y_restablecer_los_puntos"
                    android:textColor="#000"
                    android:textSize="24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                   android:text="@string/perderas_5_puntos_cada_vez_que_solicites_la_pista"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_basic"
                    android:textColor="#000"
                    android:textSize="24dp"/>

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/pts2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/gentium_basic"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="@string/los_puntos_que_logres_obtener_se_acomularan_en_tu_record_mundial"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@+id/enviar" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="80dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/gentium_book_basic_bold"
            android:gravity="center"
            android:text="@string/instrucciones"
            android:textAlignment="center"
            android:textColor="#050961"
            android:textSize="35sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/gentium_book_basic_bold"
            android:text="@string/pulsa_fuera_dal_area_para_continuar"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>