<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="90sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                tools:ignore="MissingConstraints,RtlSymmetry">


                <TextView
                    android:id="@+id/tituloUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/gentium_book_basic_bold"
                    android:text="@string/datos_de_jugador"
                    android:textColor="#000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_basic"
                    android:paddingTop="20dp"
                    android:text="@string/cuenta_creada_ateriormente_estos_son_tus_datos"
                    android:textColor="#000"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/dCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gentium_book_basic_bold"
                        android:text="@string/correo1"
                        android:textColor="#000"
                        android:textSize="30sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_book_basic_bold"
                    android:paddingTop="20dp"
                    android:text="@string/esta_es_tu_cuenta"
                    android:textColor="#600606"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/no_opt9"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_redondo"
                        android:fontFamily="@font/gentium_book_basic_bold"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/no"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#D1D0D0"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="20sp"
                        android:layout_height="12sp" />

                    <TextView
                        android:id="@+id/yes_opt9"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_redondo"
                        android:fontFamily="@font/gentium_book_basic_bold"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/si"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#D1D0D0"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:outlineAmbientShadowColor="@color/transparente"
        android:outlineSpotShadowColor="@color/transparente"
        app:cardBackgroundColor="@color/transparente"

        app:layout_constraintBottom_toTopOf="@+id/cardView7"
        app:layout_constraintEnd_toEndOf="@+id/cardView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView7">

        <TextView
            android:id="@+id/imagen"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/iconotutor" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>