<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/transparente">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="418dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="16dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="0sp"
                android:layout_height="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/gentium_book_basic_bold"
                android:text="@string/estas_seguro"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                tools:ignore="RtlCompat" />

            <Space
                android:layout_width="0sp"
                android:layout_height="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gentium_book_basic_bold"
                android:text="@string/estas_seguro_al_cerrar_sesi_n_se_perdera_todo_tu_registro_he_iniciare_nuevamente3"
                android:textAlignment="center"
                android:textColor="@color/negro"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />

            <Space
                android:layout_width="0sp"
                android:layout_height="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/ddvdvgbh"
                    style="@style/CustomButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_book_basic_bold"
                    android:padding="10dp"
                    android:text="@string/aceptar"
                    android:textColor="@color/blanco"
                    android:textSize="25sp" />

                <Space
                    android:layout_width="10sp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/canfgfgvfgcd"
                    style="@style/CustomButton123"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentium_book_basic_bold"
                    android:padding="10dp"
                    android:text="@string/cancelar"
                    android:textColor="@color/blanco"
                    android:textSize="25sp" />
            </LinearLayout>

            <Space
                android:layout_width="0sp"
                android:layout_height="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="80dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/gentium_book_basic_bold"
            android:gravity="center"
            android:text="@string/cerrar_sesi_n"
            android:textAlignment="center"
            android:textColor="#050961"
            android:textSize="35sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>